# iontrap-structure

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: LICENCE  LOG.md  PROVENANCE.md  api.md  conventions.md  getting-started.md  index.md  overview.md  validation.md
docs/stylesheets/: extra.css
docs/tutorials/: 01_first_crystal.md  02_modeconfig_handoff.md  03_mixed_species.md  04_coupling_parameter.md  05_zigzag_stability.md  index.md
docs/tutorials/notebooks/: 01_first_crystal.ipynb  02_modeconfig_handoff.ipynb  03_mixed_species.ipynb  04_coupling_parameter.ipynb  05_zigzag_stability.ipynb
src/iontrap_structure/: __init__.py  _constants.py  coulomb.py  diagnostics.py  equilibrium.py  mode_basis.py  modes.py  results.py  trap.py
taskcards/: TC-ion-mode-basis-payload.md
tests/: test_diagnostics.py  test_hessian.py  test_ion_mode_basis_contract.py  test_james1998.py  test_mixed_species.py  test_modeconfig_contract.py  test_validation.py
tests/docs/: test_tutorials_execute.py
tools/: build_tutorial_notebooks.py
